alignment fix

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -76,14 +76,17 @@
         height: rem(14px);
         fill: $themeColor;
         margin-right: rem(10px);
+        &.next{
+          margin-left: rem(10px);
+        }
       }
-
       .text {
         width: 100%;
         padding: rem(15px) 0;
         display: flex;
         flex: 0 0 100%;
         justify-content: center;
+        align-items: center;
       }
     }
   }
